remove old `team add-user` go-swagger stuff
