# restapi/configure_teresa.go
@@ -51,9 +51,6 @@ func configureAPI(api *operations.TeresaAPI) http.Handler {
 	// create deployment
 	api.DeploymentsCreateDeploymentHandler = handlers.CreateDeploymentHandler
 
-	api.TeamsAddUserToTeamHandler = teams.AddUserToTeamHandlerFunc(func(params teams.AddUserToTeamParams, principal interface{}) middleware.Responder {
-		return handlers.AddUserToTeam(params, principal)
-	})
 	// create user
 	api.UsersCreateUserHandler = users.CreateUserHandlerFunc(func(params users.CreateUserParams, principal interface{}) middleware.Responder {
 		return handlers.CreateUserHandler(params, principal)
